k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-discovery
  labels:
    app.kubernetes.io/name: backend-discovery
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backend-discovery
  ports:
    - name: http
      port: 80
      targetPort: http
